# allegro_hand_ros2

./: .gitignore  README.md  test.txt
allegro_hand_bringup/: CMakeLists.txt  getting_started_plexus.md  getting_started_v4.md
allegro_hand_bringup/config/plexus/dual_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro  ros2_controllers.yaml
allegro_hand_bringup/config/plexus/single_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro
allegro_hand_bringup/config/v4/dual_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro
allegro_hand_bringup/config/v4/single_hand/: allegro_hand.ros2_control.xacro  allegro_hand.urdf.xacro  ros2_controllers.yaml
allegro_hand_bringup/launch/: allegro_hand.gazebo.launch.py  allegro_hand.launch.py  allegro_hand_duo.launch.py  allegro_hand_plexus.launch.py
allegro_hand_bringup/script/: can_tool.py  finger_wave.py
allegro_hand_bringup/visualize/v4/: gazebo_gui.config
allegro_hand_hardwares/common/utility/include/allegro_hand_utility/: ros_utility.hpp
allegro_hand_hardwares/common/utility/src/: ros_utility.cpp
allegro_hand_hardwares/gazebo/plugin/: CMakeLists.txt  allegro_hand_gazebo_plugin.xml  package.xml  readme.md
allegro_hand_hardwares/gazebo/plugin/include/allegro_hand_gazebo_plugin/: allegro_hand_system.hpp
allegro_hand_hardwares/gazebo/plugin/src/: allegro_hand_system.cpp
allegro_hand_hardwares/plexus/description/urdf/: allegro_plexus_left.xacro copy  allegro_plexus_right.xacro  allegro_plexus_right.xacro copy
allegro_hand_hardwares/plexus/hardware/: readme.md
allegro_hand_hardwares/plexus/hardware/include/allegro_hand_plexus_hardware/: generic_system.hpp  hardware_interface.hpp  visibility_control.h
allegro_hand_hardwares/plexus/hardware/src/: plexus_hardware_interface.cpp  plexus_sdk.cpp  plexus_sdk.hpp
allegro_hand_hardwares/v4/description/config/: torque_limits.yaml
allegro_hand_hardwares/v4/description/urdf/: allegro_hand_description_left.xacro  allegro_hand_description_right.xacro
allegro_hand_hardwares/v4/hardware/: CMakeLists.txt  readme.md
allegro_hand_hardwares/v4/hardware/include/allegro_hand_v4_hardware/: generic_system.hpp  hardware_interface.hpp  visibility_control.h
allegro_hand_hardwares/v4/hardware/src/: v4_hardware_interface.cpp  v4_sdk.cpp
allegro_hand_moveit_config/: .setup_assistant
allegro_hand_moveit_config/config/: allegro_hand.srdf  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
allegro_hand_moveit_config/launch/: demo.launch.py
