<?xml version="1.0"?>
<package format="3">
  <name>allegro_hand_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>Gazebo plugin for Allegro Hand simulation using ros2_control framework.</description>

  <maintainer email="wonikrobotics@gmail.com">Wonikrobotics-git</maintainer>
  <maintainer email="jijang@wonik.com">('c')void</maintainer>
  <license>BSD</license>
  <url type="website">https://www.allegrohand.com/</url>
  <url type="website">https://github.com/Wonikrobotics-git/</url>

  <author email="jjieureka@gmail.com">('c')void</author>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Harmonic -->
  <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
  <depend condition="$GZ_VERSION == harmonic">gz-plugin2</depend>
  <!-- Fortress (default) -->
  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == fortress">ignition-gazebo6</depend>
  <depend condition="$GZ_VERSION == '' or $GZ_VERSION == fortress">ignition-plugin</depend>

  <depend>ament_index_cpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>gz_ros2_control</depend>

  <depend>spdlog</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
